--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,10 +18,8 @@
   },
   "homepage": "https://github.com/Jarvis-3000/dummy#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "nodemailer": "^6.4.11"
+    "express-ejs-layouts": "^2.5.0"
   }
 }
