--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "dummy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon server.js",
+    "mocha": "mocha"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,8 @@
   },
   "homepage": "https://github.com/Jarvis-3000/dummy#readme",
   "dependencies": {
-    "ejs": "^3.1.5",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0"
+    "mongoose": "^5.10.5"
   }
 }
